--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "headlessui": "^0.0.0",
     "heroicons": "^2.2.0",
     "jquery": "^3.7.1",
     "lucide-react": "^0.525.0",
