--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "ikonix",
   "version": "0.1.0",
+  "proxy": "https://ikonixperfumer.com",
   "private": true,
   "dependencies": {
     "@heroicons/react": "^2.2.0",
@@ -13,6 +14,7 @@
     "heroicons": "^2.2.0",
     "jquery": "^3.7.1",
     "lucide-react": "^0.525.0",
+    "qs": "^6.14.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
