--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "ikonix",
   "version": "0.1.0",
-  "proxy": "https://ikonixperfumer.com",
+  "proxy": "https://ikonixperfumer.com/production",
+  "homepage": "https://ikonixperfumer.com",
   "private": true,
   "dependencies": {
     "@heroicons/react": "^2.2.0",
@@ -20,6 +21,7 @@
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
     "react-phone-input-2": "^2.15.1",
+    "react-razorpay": "^3.0.1",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.6.3",
     "react-scripts": "5.0.1",
