--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "react-scripts": "5.0.1",
     "react-slick": "^0.30.3",
     "slick-carousel": "^1.8.1",
+    "sweetalert": "^2.1.2",
+    "sweetalert2": "^11.23.0",
     "tailwind-scrollbar-hide": "^4.0.0",
     "web-vitals": "^2.1.4"
   },
